--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.13.0"
+    "react-router-dom": "^7.13.0",
+    "resend": "^6.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
